# Ray_Tracing-Rendering

./: .clang-format  .gitignore  CMakeLists.txt  README.md  REFACTORING_PLAN.md  光照.md  第三部分材质与纹理技术文档.md  第五部分说明文档.md
libs/imgui/backends/: imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.h
src/: aabb.h  aarect.h  constant_medium.h  hittable.h  main.cpp  material.h  moving_sphere.h  path.txt  path_integrator.h  perlin.h  ray.h  render_buffer.h  renderer.h  rtweekend.h  scenes.cpp  scenes.h  sphere.h  texture.h  vec3.h
src/app/: Application.cpp  Application.h  ImageProcessor.cpp  ImageProcessor.h  PerformanceMonitor.cpp  PerformanceMonitor.h  RenderManager.cpp  RenderManager.h  WindowsApp.cpp  WindowsApp.h
src/core/: onb.h  ray.h  rtweekend.h  vec3.h
src/geometry/: aabb.h  aarect.h  box.h  bvh.h  constant_medium.h  hittable.h  hittable_list.h  mesh.h  moving_sphere.h  sphere.h  triangle.h
src/lighting/: directional_light.h  environment_light.h  environmental_light.h  light.h  point_light.h  quad_light.h  spot_light.h
src/materials/: material.h  perlin.h  texture.h
src/renderer/: camera.h  direct_light_integrator.h  integrator.h  mis_path_integrator.h  path_integrator.h  pbr_path_integrator.h  render_buffer.h  renderer.h  rr_path_integrator.h
src/scene/: scenes.cpp  scenes.h
src/utils/: aligned_allocator.h  image_ops.cpp  image_ops.h  simd.h  simd_rgba.h
